k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttis
  namespace: ttis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 3000
